<resources>
    <string name="app_name">Ejercicio1001</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Libreta">Libreta</string>
    <string name="salir">Salir</string>
    <string name="texto">Texto</string>
    <string name="imagen">Imagen</string>
    <string name="path2">Path2</string>
    <string name="path1">Path1</string>
    <string name="bola">Bola</string>
</resources>