<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ejercicio1001.MainActivity">

    <item
        android:id="@+id/texto"
        android:orderInCategory="100"
        android:title="@string/texto"
        app:showAsAction="never" />
    <item
        android:id="@+id/libreta"
        android:orderInCategory="100"
        android:title="@string/Libreta"
        app:showAsAction="never" />
    <item
        android:id="@+id/imagen"
        android:orderInCategory="100"
        android:title="@string/imagen"
        app:showAsAction="never" />
    <item
        android:id="@+id/ActPath1"
        android:orderInCategory="100"
        android:title="@string/path1"
        app:showAsAction="never" />
    <item
        android:id="@+id/ActPath2"
        android:orderInCategory="100"
        android:title="@string/path2"
        app:showAsAction="never" />

    <item
        android:id="@+id/ActBola"
        android:orderInCategory="100"
        android:title="@string/bola"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/salir"
        app:showAsAction="never" />
</menu>